--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,8 +2,12 @@ homepage: "https://www.snowplowanalytics.com"
 documentation: "https://docs.snowplowanalytics.com/docs/forwarding-events-to-destinations/forwarding-events/google-tag-manager-server-side/amplitude-tag-for-gtm-ss/"
 versions:
   # Latest version
+  - sha: 0afe7246684bfa5dd2bedb90c148969ab7972dec
+    changeNotes: |2
+      Update copyright to 2022 (#11)
+      Fix typo that is breaking sending User Properties properly to Amplitude (#10)
+  # Older versions
   - sha: 6bd48b3397507e030dea9e34ad496520c4438538
     changeNotes: Update Documentation Links (#3)
-  # Older versions
   - sha: 91079e22b124c1e139af742f9593780f345a2114
     changeNotes: Initial Version
