Prepare for 0.4.0 release

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,11 +2,13 @@ homepage: "https://www.snowplow.io"
 documentation: "https://docs.snowplow.io/docs/forwarding-events-to-destinations/forwarding-events/google-tag-manager-server-side/amplitude-tag-for-gtm-ss"
 versions:
   # Latest version
+  - sha: 6fb6d64efe5d4e77322db4235dbe1613d83e5541
+    changeNotes: Allow setting properties to custom value (#26)
+  # Older versions
   - sha: 2f416ab720886a6e066aae7c3d0b2693071d3bac
     changeNotes: |2
       Add GitHub Actions (#24)
       Allow overriding device_id and user_id in Amplitude payload (#23)
-  # Older versions
   - sha: 9c479e4d01278de01e376a177cface85ae77cf17
     changeNotes: |2
       Switch to snowplow.io domain (#21)
