--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,7 +37,8 @@ jobs:
         python -m pip install --user yamllint
 
     - name: Lint metadata file
-      run: yamllint -d relaxed metadata.yaml
+      run: |
+        yamllint -d "{extends: relaxed, rules: {line-length: {max: 120}}}" metadata.yaml
 
   release:
     needs: ["lint", "version"]
